fix layout bug in FF

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -69,9 +69,13 @@ a[href] {
   border-bottom: 1px solid #000;
   font-size: 1.5rem;
 
-  .pub img {
-    height: calc(100% - 20px);
-    margin: 10px 0;
+  .pub {
+    height: 100%;
+    
+    img {
+      height: calc(100% - 20px);
+      margin: 10px 0;
+    }
   }
 
   h1 {
